minor cleanup to BOService